--- a/undangan.html
+++ b/undangan.html
@@ -240,9 +240,22 @@
     function startSnow() {
       const container = document.getElementById("salju-container");
       const snowImages = [
-        "assets/salju/salju1.png",
-        "assets/salju/salju2.png",
-        "assets/salju/salju3.png"
+        "assets/salju1.png",
+        "assets/salju2.png",
+        "assets/salju3.png",
+        "assets/salju4.png",
+        "assets/salju5.png",
+        "assets/salju6.png",
+        "assets/salju7.png",
+        "assets/merpati1.png",
+        "assets/merpati2.png",
+        "assets/merpati3.png",
+      "assets/merpati4.png",
+      "assets/merpati5.png",
+        "assets/merpati6.png",
+        "assets/merpati7.png",
+        "assets/merpati8.png",
+      "assets/merpati9.png"
       ];
 
       setInterval(() => {
