--- a/undangan.html
+++ b/undangan.html
@@ -240,22 +240,22 @@
     function startSnow() {
       const container = document.getElementById("salju-container");
       const snowImages = [
-        "assets/salju1.png",
-        "assets/salju2.png",
-        "assets/salju3.png",
-        "assets/salju4.png",
-        "assets/salju5.png",
-        "assets/salju6.png",
-        "assets/salju7.png",
-        "assets/merpati1.png",
-        "assets/merpati2.png",
-        "assets/merpati3.png",
-      "assets/merpati4.png",
-      "assets/merpati5.png",
-        "assets/merpati6.png",
-        "assets/merpati7.png",
-        "assets/merpati8.png",
-      "assets/merpati9.png"
+        "assets/images/salju1.png",
+        "assets/images/salju2.png",
+        "assets/images/salju3.png",
+        "assets/images/salju4.png",
+        "assets/images/salju5.png",
+        "assets/images/salju6.png",
+        "assets/images/salju7.png",
+        "assets/images/merpati1.png",
+        "assets/images/merpati2.png",
+        "assets/images/merpati3.png",
+        "assets/images/merpati4.png",
+        "assets/images/merpati5.png",
+        "assets/images/merpati6.png",
+        "assets/images/merpati7.png",
+        "assets/images/merpati8.png",
+        "assets/images/merpati9.png"
       ];
 
       setInterval(() => {
