--- a/undangan.html
+++ b/undangan.html
@@ -241,6 +241,12 @@
       const container = document.getElementById("salju-container");
       const snowImages = [
         "assets/images/salju1.png",
+        "assets/images/salju2.png",
+        "assets/images/salju3.png",
+        "assets/images/salju4.png",
+        "assets/images/salju5.png",
+        "assets/images/salju6.png",
+        "assets/images/salju7.png",
       ];
 
       setInterval(() => {
