--- a/undangan.html
+++ b/undangan.html
@@ -247,6 +247,15 @@
         "assets/images/salju5.png",
         "assets/images/salju6.png",
         "assets/images/salju7.png",
+        "assets/images/merpati1.png",
+        "assets/images/merpati2.png",
+        "assets/images/merpati3.png",
+        "assets/images/merpati4.png",
+        "assets/images/merpati5.png",
+        "assets/images/merpati6.png",
+        "assets/images/merpati7.png",
+        "assets/images/merpati8.png",
+        "assets/images/merpati9.png",
       ];
 
       setInterval(() => {
