--- a/undangan.html
+++ b/undangan.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Undangan 40 Hari</title>
+  <title>Undangan 40 Hari - Mama/Nenek Tercinta Rosina Naif</title>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <style>
     * {
