--- a/undangan.html
+++ b/undangan.html
@@ -24,6 +24,7 @@
       width: 100%;
       height: 100vh;
       overflow: hidden;
+      padding-bottom: 100px; /* Tambahkan ruang untuk guest-box agar tidak nutupin konten */
     }
 
     .background {
@@ -81,14 +82,14 @@
       100% { transform: rotate(360deg); }
     }
 
-    .snowflake, .dove {
+    .snowflake {
       position: fixed;
       top: -50px;
       z-index: 2;
       pointer-events: none;
     }
 
-    .snowflake img, .dove img {
+    .snowflake img {
       width: 24px;
       height: auto;
       opacity: 0.8;
@@ -134,12 +135,12 @@
       }
 
       .guest-box {
-        bottom: 3px;
+        bottom: 80px; /* Digeser ke atas agar tidak menutupi teks/gambar utama */
         left: 50%;
         transform: translateX(-50%);
         width: 90%;
         padding: 12px 16px;
-        background-color: rgba(255, 255, 255, 0.8);
+        background-color: rgba(255, 255, 255, 0.85);
         color: #333;
         border: 2px dashed #666;
         border-radius: 12px;
@@ -189,7 +190,7 @@
     </audio>
   </div>
 
-  <!-- Snow container -->
+  <!-- Container untuk efek salju dan merpati -->
   <div id="salju-container"></div>
 
   <script>
@@ -221,7 +222,7 @@
         });
       }
 
-      // Salju muncul setelah semua siap
+      // Jalankan efek salju
       startSnow();
     };
 
@@ -268,7 +269,7 @@
         snow.appendChild(img);
         container.appendChild(snow);
 
-        let duration = Math.random() * 5 + 5;
+        const duration = Math.random() * 5 + 5;
         snow.animate([
           { transform: "translateY(0)", opacity: 1 },
           { transform: "translateY(100vh)", opacity: 0.2 }
