--- a/undangan.html
+++ b/undangan.html
@@ -24,7 +24,6 @@
       width: 100%;
       height: 100vh;
       overflow: hidden;
-      padding-bottom: 100px; /* Tambahkan ruang untuk guest-box agar tidak nutupin konten */
     }
 
     .background {
@@ -82,14 +81,14 @@
       100% { transform: rotate(360deg); }
     }
 
-    .snowflake {
+    .snowflake, .dove {
       position: fixed;
       top: -50px;
       z-index: 2;
       pointer-events: none;
     }
 
-    .snowflake img {
+    .snowflake img, .dove img {
       width: 24px;
       height: auto;
       opacity: 0.8;
@@ -135,12 +134,12 @@
       }
 
       .guest-box {
-        bottom: 80px; /* Digeser ke atas agar tidak menutupi teks/gambar utama */
+        bottom: 3px;
         left: 50%;
         transform: translateX(-50%);
         width: 90%;
         padding: 12px 16px;
-        background-color: rgba(255, 255, 255, 0.85);
+        background-color: rgba(255, 255, 255, 0.8);
         color: #333;
         border: 2px dashed #666;
         border-radius: 12px;
@@ -190,7 +189,7 @@
     </audio>
   </div>
 
-  <!-- Container untuk efek salju dan merpati -->
+  <!-- Snow container -->
   <div id="salju-container"></div>
 
   <script>
@@ -222,7 +221,7 @@
         });
       }
 
-      // Jalankan efek salju
+      // Salju muncul setelah semua siap
       startSnow();
     };
 
@@ -269,7 +268,7 @@
         snow.appendChild(img);
         container.appendChild(snow);
 
-        const duration = Math.random() * 5 + 5;
+        let duration = Math.random() * 5 + 5;
         snow.animate([
           { transform: "translateY(0)", opacity: 1 },
           { transform: "translateY(100vh)", opacity: 0.2 }
