--- a/undangan.html
+++ b/undangan.html
@@ -6,7 +6,7 @@
   <!-- Open Graph Meta Tags -->
   <meta property="og:title" content="Undangan 40 Hari - Mama/Nenek Tercinta Rosina Naif">
   <meta property="og:description" content="Kepada Yth. Bapak/Ibu/Saudara/i, kami mengundang Anda dalam acara 40 harian.">
-  <meta property="og:image" content="https://40hari-nenek-rosina-naif.vercel.app/assets/images/og-image.jpg">
+  <meta property="og:image" content="https://40hari-nenek-rosina-naif.vercel.app/assets/images/icon.png">
   <meta property="og:url" content="https://40hari-nenek-rosina-naif.vercel.app/undangan.html">
   <meta property="og:type" content="website">
   <title>Undangan 40 Hari - Mama/Nenek Tercinta Rosina Naif</title>
