--- a/undangan.html
+++ b/undangan.html
@@ -3,12 +3,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <!-- Open Graph Meta Tags -->
-  <meta property="og:title" content="Undangan 40 Hari - Mama/Nenek Tercinta Rosina Naif">
-  <meta property="og:description" content="Kepada Yth. Bapak/Ibu/Saudara/i, kami mengundang Anda dalam acara 40 harian.">
-  <meta property="og:image" content="https://40hari-nenek-rosina-naif.vercel.app/assets/images/icon.png">
-  <meta property="og:url" content="https://40hari-nenek-rosina-naif.vercel.app/undangan.html">
-  <meta property="og:type" content="website">
+  <meta property="og:title" content="Undangan 40 Hari Rosina Naif" />
+<meta property="og:description" content="Kepada Yth. Bapak/Ibu/Saudara/i, kami mengundang Anda dalam acara 40 hari Mama/Nenek tercinta Rosina Naif." />
+<meta property="og:image" content="https://40hari-nenek-rosina-naif.vercel.app/assets/images/icon.png" />
+<meta property="og:url" content="https://40hari-nenek-rosina-naif.vercel.app/undangan.html" />
+<meta property="og:type" content="website" />
+
+<!-- Twitter Card agar tampil juga di WhatsApp, Telegram -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="Undangan 40 Hari Rosina Naif" />
+<meta name="twitter:description" content="Kehadiran dan doa Anda sangat berarti bagi keluarga besar kami." />
+<meta name="twitter:image" content="https://40hari-nenek-rosina-naif.vercel.app/assets/images/icon.png" />
   <title>Undangan 40 Hari - Mama/Nenek Tercinta Rosina Naif</title>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <style>
