--- a/undangan.html
+++ b/undangan.html
@@ -7,7 +7,7 @@
   <!-- META OG Tags -->
   <meta property="og:title" content="Undangan 40 Hari Rosina Naif" />
   <meta property="og:description" content="Kepada Yth. Bapak/Ibu/Saudara/i, kami mengundang Anda dalam acara 40 hari Mama/Nenek tercinta Rosina Naif." />
-  <meta property="og:image" content="https://40hari-nenek-rosina-naif.vercel.app/assets/images/icon.png" />
+  <meta property="og:image" content="https://40hari-nenek-rosina-naif.vercel.app/assets/images/icon.jpg" />
   <meta property="og:url" content="https://40hari-nenek-rosina-naif.vercel.app/undangan.html" />
   <meta property="og:type" content="website" />
 
