--- a/undangan.html
+++ b/undangan.html
@@ -3,18 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <meta property="og:title" content="Undangan 40 Hari Rosina Naif" />
-<meta property="og:description" content="Kepada Yth. Bapak/Ibu/Saudara/i, kami mengundang Anda dalam acara 40 hari Mama/Nenek tercinta Rosina Naif." />
-<meta property="og:image" content="https://40hari-nenek-rosina-naif.vercel.app/assets/images/icon.png" />
-<meta property="og:url" content="https://40hari-nenek-rosina-naif.vercel.app/undangan.html" />
-<meta property="og:type" content="website" />
-
-<!-- Twitter Card agar tampil juga di WhatsApp, Telegram -->
-<meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:title" content="Undangan 40 Hari Rosina Naif" />
-<meta name="twitter:description" content="Kehadiran dan doa Anda sangat berarti bagi keluarga besar kami." />
-<meta name="twitter:image" content="https://40hari-nenek-rosina-naif.vercel.app/assets/images/icon.png" />
-  <title>Undangan 40 Hari - Mama/Nenek Tercinta Rosina Naif</title>
+  <title>Undangan 40 Hari - Mama/Nenek Rosina Naif</title>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <style>
     * {
@@ -28,6 +17,7 @@
       height: 100%;
       font-family: 'Segoe UI', sans-serif;
       overflow-x: hidden;
+      background-color: #000;
     }
 
     .container {
@@ -92,17 +82,49 @@
       100% { transform: rotate(360deg); }
     }
 
-    .snowflake, .dove {
+    .snowflake {
       position: fixed;
       top: -50px;
       z-index: 2;
       pointer-events: none;
     }
 
-    .snowflake img, .dove img {
+    .snowflake img {
       width: 24px;
       height: auto;
       opacity: 0.8;
+    }
+
+    /* Tombol pembuka */
+    .opening-overlay {
+      position: fixed;
+      z-index: 1000;
+      background: rgba(0,0,0,0.9);
+      color: white;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      text-align: center;
+    }
+
+    .opening-overlay button {
+      margin-top: 20px;
+      padding: 12px 24px;
+      background: #ffffff10;
+      color: white;
+      border: 2px solid white;
+      font-size: 18px;
+      border-radius: 12px;
+      cursor: pointer;
+      transition: background 0.3s ease;
+    }
+
+    .opening-overlay button:hover {
+      background: white;
+      color: black;
     }
 
     @media (min-width: 769px) {
@@ -181,6 +203,13 @@
   </style>
 </head>
 <body>
+  <!-- Pembuka -->
+  <div class="opening-overlay" id="openOverlay">
+    <h2>Undangan Peringatan 40 Hari</h2>
+    <p>Untuk Almarhumah Rosina Naif</p>
+    <button onclick="mulaiUndangan()">Buka Undangan</button>
+  </div>
+
   <div class="container">
     <img src="assets/images/Artboard 5xxhdpi.png" alt="Undangan" class="background" />
     <div class="guest-box" id="guestBox">
@@ -191,16 +220,16 @@
     </div>
 
     <button class="audio-btn spin" id="audioBtn" onclick="toggleAudio()">
-      <span class="material-icons" id="iconAudio">pause</span>
+      <span class="material-icons" id="iconAudio">stop</span>
     </button>
 
-    <audio id="bgMusic" loop autoplay muted>
+    <audio id="bgMusic" loop muted>
       <source src="assets/lagu.mp3" type="audio/mpeg" />
       Browser Anda tidak mendukung audio.
     </audio>
   </div>
 
-  <!-- Snow container -->
+  <!-- Salju -->
   <div id="salju-container"></div>
 
   <script>
@@ -214,32 +243,30 @@
       return nama ? decodeURIComponent(nama) : null;
     }
 
-    window.onload = () => {
+    function mulaiUndangan() {
+      document.getElementById('openOverlay').style.display = 'none';
+
       const nama = getNamaDariURL();
       if (nama) {
         document.getElementById("namaTamu").textContent = nama;
       }
 
       audio.muted = false;
-      const promise = audio.play();
-      if (promise !== undefined) {
-        promise.then(() => {
-          iconAudio.textContent = "pause";
-          audioBtn.classList.add("spin");
-        }).catch(() => {
-          iconAudio.textContent = "play_arrow";
-          audioBtn.classList.remove("spin");
-        });
-      }
+      audio.play().then(() => {
+        iconAudio.textContent = "stop";
+        audioBtn.classList.add("spin");
+      }).catch(() => {
+        iconAudio.textContent = "play_arrow";
+        audioBtn.classList.remove("spin");
+      });
 
-      // Salju muncul setelah semua siap
       startSnow();
-    };
+    }
 
     function toggleAudio() {
       if (audio.paused) {
         audio.play();
-        iconAudio.textContent = "pause";
+        iconAudio.textContent = "stop";
         audioBtn.classList.add("spin");
       } else {
         audio.pause();
@@ -269,4 +296,28 @@
         "assets/images/merpati9.png",
       ];
 
-      setI
+      setInterval(() => {
+        const snow = document.createElement("div");
+        snow.className = "snowflake";
+        const img = document.createElement("img");
+        img.src = snowImages[Math.floor(Math.random() * snowImages.length)];
+        snow.style.left = Math.random() * 100 + "vw";
+        img.style.width = (Math.random() * 12 + 12) + "px";
+        snow.appendChild(img);
+        container.appendChild(snow);
+
+        let duration = Math.random() * 5 + 5;
+        snow.animate([
+          { transform: "translateY(0)", opacity: 1 },
+          { transform: "translateY(100vh)", opacity: 0.2 }
+        ], {
+          duration: duration * 1000,
+          easing: "linear"
+        });
+
+        setTimeout(() => snow.remove(), duration * 1000);
+      }, 300);
+    }
+  </script>
+</body>
+</html>
