--- a/undangan.html
+++ b/undangan.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <meta property="og:title" content="Undangan 40 Hari - Rosina Naif">
   <meta property="og:description" content="Dengan hormat, kami mengundang Bapak/Ibu untuk hadir dalam acara 40 Hari wafatnya Almarhumah Rosina Naif.">
-  <meta property="og:image" content="https://40hari-nenek-rosina-naif.vercel.app/assets/images/icon.png">
+  <meta property="og:image" content="https://40hari-nenek-rosina-naif.vercel.app/assets/images/icon.jpg">
   <meta property="og:url" content="https://40hari-nenek-rosina-naif.vercel.app/undangan.html">
   <meta property="og:type" content="website">
   
@@ -15,7 +15,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Undangan 40 Hari - Rosina Naif">
   <meta name="twitter:description" content="Kehadiran Bapak/Ibu/Saudara/i sangat berarti bagi keluarga kami.">
-  <meta name="twitter:image" content="https://40hari-nenek-rosina-naif.vercel.app/assets/images/icon.png">
+  <meta name="twitter:image" content="https://40hari-nenek-rosina-naif.vercel.app/assets/images/icon.jpg">
   <style>
     * {
       box-sizing: border-box;
