--- a/undangan.html
+++ b/undangan.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Undangan 40 Hari - Mama/Nenek Rosina Naif</title>
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <meta property="og:title" content="Undangan 40 Hari - Rosina Naif">
-  <meta property="og:description" content="Dengan hormat, kami mengundang Bapak/Ibu untuk hadir dalam acara 40 Hari wafatnya Almarhumah Rosina Naif.">
-  <meta property="og:image" content="https://40hari-nenek-rosina-naif.vercel.app/assets/images/icon.jpg">
-  <meta property="og:url" content="https://40hari-nenek-rosina-naif.vercel.app/undangan.html">
-  <meta property="og:type" content="website">
-  
+  <!-- META OG Tags -->
+  <meta property="og:title" content="Undangan 40 Hari Rosina Naif" />
+  <meta property="og:description" content="Kepada Yth. Bapak/Ibu/Saudara/i, kami mengundang Anda dalam acara 40 hari Mama/Nenek tercinta Rosina Naif." />
+  <meta property="og:image" content="https://40hari-nenek-rosina-naif.vercel.app/assets/images/icon.png" />
+  <meta property="og:url" content="https://40hari-nenek-rosina-naif.vercel.app/undangan.html" />
+  <meta property="og:type" content="website" />
+
   <!-- Twitter Card Preview -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Undangan 40 Hari - Rosina Naif">
-  <meta name="twitter:description" content="Kehadiran Bapak/Ibu/Saudara/i sangat berarti bagi keluarga kami.">
-  <meta name="twitter:image" content="https://40hari-nenek-rosina-naif.vercel.app/assets/images/icon.jpg">
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Undangan 40 Hari Rosina Naif" />
+  <meta name="twitter:description" content="Kehadiran dan doa Anda sangat berarti bagi keluarga besar kami." />
+  <meta name="twitter:image" content="https://40hari-nenek-rosina-naif.vercel.app/assets/images/icon.png" />
+
+  <!-- Favicon fallback -->
+  <link rel="icon" href="data:,">
+
+  <title>Undangan 40 Hari - Mama/Nenek Tercinta Rosina Naif</title>
+
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <style>
     * {
       box-sizing: border-box;
