--- a/undangan.html
+++ b/undangan.html
@@ -221,8 +221,8 @@
 </head>
 <body>
   <div class="opening-overlay" id="openOverlay">
-    <h2>Undangan Peringatan 40 Hari</h2>
-    <p>Untuk Almarhumah Rosina Naif</p>
+    <h2>Undangan Misa Arwah Peringatan 40 Hari Meninggalnya</h2>
+    <p>Mama/Nenek Rosina Naif</p>
     <button onclick="mulaiUndangan()">Buka Undangan</button>
   </div>
 
